# rust-pw-manager

./: .gitignore  Cargo.toml  README.md  rust-pw-manager
src/: db.rs  main.rs
src/db/: auth.rs
