[package]
name = "rust-pw-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
cli-clipboard = "0.4.0"
ctrlc = "3.4.4"
hex-literal = "0.4.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
signal-hook = "0.3.17"
sqlite = "0.36.0"
termion = "4.0.2"

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
